--- a/index.html
+++ b/index.html
@@ -16,12 +16,15 @@
     <div class="topbar">
         <a href="#"><img class="topbar-logo" src="img/logo.png"></a>
         <div class="navbar">
-            <a class="active" href="index.html">Home</a>
-            <a href="shop.html">Shop</a>
-            <a href="blog.html">Blog</a>
-            <a href="about.html">About</a>
-            <a href="contact.html">Contact</a>
+            <div class="navbar-list">
+                <a class="active" href="index.html">Home</a>
+                <a href="shop.html">Shop</a>
+                <a href="blog.html">Blog</a>
+                <a href="about.html">About</a>
+                <a href="contact.html">Contact</a>
+            </div>
             <a href="cart.html"><i class='bxr  bx-cart-minus'></i></a>
+            <i class='bxr  bx-menu-notification menu' ></i> 
         </div>
     </div>
 
@@ -33,6 +36,34 @@
             <h1>On all products</h1>
             <p>Save more with coupons & up to 70% off!</p>
             <a href="shop.html">Shop Now</a>
+        </div>
+    </div>
+
+    <!-- Feature -->
+    <div class="feature">
+        <div class="feature-item">
+            <img src="img/features/f1.png" alt="">
+            <h3>Free shipping</h3>
+        </div>
+        <div class="feature-item">
+            <img src="img/features/f2.png" alt="">
+            <h3>Free shipping</h3>
+        </div>
+        <div class="feature-item">
+            <img src="img/features/f3.png" alt="">
+            <h3>Free shipping</h3>
+        </div>
+        <div class="feature-item">
+            <img src="img/features/f4.png" alt="">
+            <h3>Free shipping</h3>
+        </div>
+        <div class="feature-item">
+            <img src="img/features/f5.png" alt="">
+            <h3>Free shipping</h3>
+        </div>
+        <div class="feature-item">
+            <img src="img/features/f6.png" alt="">
+            <h3>Free shipping</h3>
         </div>
     </div>
 
