--- a/index.html
+++ b/index.html
@@ -67,6 +67,128 @@
         </div>
     </div>
 
+    <!-- Product -->
+    <div class="product">
+        <div class="product-title">
+            <h2>Featured Products</h2>
+            <p>Summer Collection New Morden Design</p>
+        </div>
+        <div class="product-content">
+            <div class="product-item">
+                <img src="img/products/f1.jpg" alt="">
+                <span>adidas</span>
+                <h3>Cartoon Astronaut T-Shirts</h3>
+                <div class="rating">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                </div>
+                <h4>$78.00</h4>
+                <a href="#"><i class='bxr  bx-shopping-bag'></i> </a>
+            </div>
+            <div class="product-item">
+                <img src="img/products/f2.jpg" alt="">
+                <span>adidas</span>
+                <h3>Cartoon Astronaut T-Shirts</h3>
+                <div class="rating">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                </div>
+                <h4>$78.00</h4>
+                <a href="#"><i class='bxr  bx-shopping-bag'></i> </a>
+            </div>
+            <div class="product-item">
+                <img src="img/products/f3.jpg" alt="">
+                <span>adidas</span>
+                <h3>Cartoon Astronaut T-Shirts</h3>
+                <div class="rating">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                </div>
+                <h4>$78.00</h4>
+                <a href="#"><i class='bxr  bx-shopping-bag'></i> </a>
+            </div>
+            <div class="product-item">
+                <img src="img/products/f4.jpg" alt="">
+                <span>adidas</span>
+                <h3>Cartoon Astronaut T-Shirts</h3>
+                <div class="rating">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                </div>
+                <h4>$78.00</h4>
+                <a href="#"><i class='bxr  bx-shopping-bag'></i> </a>
+            </div>
+            <div class="product-item">
+                <img src="img/products/f5.jpg" alt="">
+                <span>adidas</span>
+                <h3>Cartoon Astronaut T-Shirts</h3>
+                <div class="rating">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                </div>
+                <h4>$78.00</h4>
+                <a href="#"><i class='bxr  bx-shopping-bag'></i> </a>
+            </div>
+            <div class="product-item">
+                <img src="img/products/f6.jpg" alt="">
+                <span>adidas</span>
+                <h3>Cartoon Astronaut T-Shirts</h3>
+                <div class="rating">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                </div>
+                <h4>$78.00</h4>
+                <a href="#"><i class='bxr  bx-shopping-bag'></i> </a>
+            </div>
+            <div class="product-item">
+                <img src="img/products/f7.jpg" alt="">
+                <span>adidas</span>
+                <h3>Cartoon Astronaut T-Shirts</h3>
+                <div class="rating">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                </div>
+                <h4>$78.00</h4>
+                <a href="#"><i class='bxr  bx-shopping-bag'></i> </a>
+            </div>
+            <div class="product-item">
+                <img src="img/products/f8.jpg" alt="">
+                <span>adidas</span>
+                <h3>Cartoon Astronaut T-Shirts</h3>
+                <div class="rating">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                </div>
+                <h4>$78.00</h4>
+                <a href="#"><i class='bxr  bx-shopping-bag'></i> </a>
+            </div>
+        </div>
+    </div>
+
     <script src="script.js"></script>
 </body>
 
