--- a/index.html
+++ b/index.html
@@ -189,6 +189,13 @@
         </div>
     </div>
 
+    <!-- Services -->
+    <div class="services">
+        <span>Repair Services</span>
+        <h3>Up to <span>70% Off</span> - All t-Shirts & Accessories</h3>
+        <a href="#">Explore More</a>
+    </div>
+
     <script src="script.js"></script>
 </body>
 
