--- a/index.html
+++ b/index.html
@@ -196,6 +196,128 @@
         <a href="#">Explore More</a>
     </div>
 
+     <!-- Product -->
+     <div class="product">
+        <div class="product-title">
+            <h2>New Arrivals</h2>
+            <p>Summer Collection New Morden Design</p>
+        </div>
+        <div class="product-content">
+            <div class="product-item">
+                <img src="img/products/n1.jpg" alt="">
+                <span>adidas</span>
+                <h3>Cartoon Astronaut T-Shirts</h3>
+                <div class="rating">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                </div>
+                <h4>$78.00</h4>
+                <a href="#"><i class='bxr  bx-shopping-bag'></i> </a>
+            </div>
+            <div class="product-item">
+                <img src="img/products/n2.jpg" alt="">
+                <span>adidas</span>
+                <h3>Cartoon Astronaut T-Shirts</h3>
+                <div class="rating">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                </div>
+                <h4>$78.00</h4>
+                <a href="#"><i class='bxr  bx-shopping-bag'></i> </a>
+            </div>
+            <div class="product-item">
+                <img src="img/products/n3.jpg" alt="">
+                <span>adidas</span>
+                <h3>Cartoon Astronaut T-Shirts</h3>
+                <div class="rating">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                </div>
+                <h4>$78.00</h4>
+                <a href="#"><i class='bxr  bx-shopping-bag'></i> </a>
+            </div>
+            <div class="product-item">
+                <img src="img/products/n4.jpg" alt="">
+                <span>adidas</span>
+                <h3>Cartoon Astronaut T-Shirts</h3>
+                <div class="rating">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                </div>
+                <h4>$78.00</h4>
+                <a href="#"><i class='bxr  bx-shopping-bag'></i> </a>
+            </div>
+            <div class="product-item">
+                <img src="img/products/n5.jpg" alt="">
+                <span>adidas</span>
+                <h3>Cartoon Astronaut T-Shirts</h3>
+                <div class="rating">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                </div>
+                <h4>$78.00</h4>
+                <a href="#"><i class='bxr  bx-shopping-bag'></i> </a>
+            </div>
+            <div class="product-item">
+                <img src="img/products/n6.jpg" alt="">
+                <span>adidas</span>
+                <h3>Cartoon Astronaut T-Shirts</h3>
+                <div class="rating">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                </div>
+                <h4>$78.00</h4>
+                <a href="#"><i class='bxr  bx-shopping-bag'></i> </a>
+            </div>
+            <div class="product-item">
+                <img src="img/products/n7.jpg" alt="">
+                <span>adidas</span>
+                <h3>Cartoon Astronaut T-Shirts</h3>
+                <div class="rating">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                </div>
+                <h4>$78.00</h4>
+                <a href="#"><i class='bxr  bx-shopping-bag'></i> </a>
+            </div>
+            <div class="product-item">
+                <img src="img/products/n8.jpg" alt="">
+                <span>adidas</span>
+                <h3>Cartoon Astronaut T-Shirts</h3>
+                <div class="rating">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                </div>
+                <h4>$78.00</h4>
+                <a href="#"><i class='bxr  bx-shopping-bag'></i> </a>
+            </div>
+        </div>
+    </div>
+
     <script src="script.js"></script>
 </body>
 
