--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </div>
     </div>
 
-    <!-- Product -->
+    <!-- Product1 -->
     <div class="product">
         <div class="product-title">
             <h2>Featured Products</h2>
@@ -196,7 +196,7 @@
         <a href="#">Explore More</a>
     </div>
 
-     <!-- Product -->
+     <!-- Product2 -->
      <div class="product">
         <div class="product-title">
             <h2>New Arrivals</h2>
@@ -317,6 +317,38 @@
             </div>
         </div>
     </div>
+
+    <!-- Smm banner -->
+     <div class="sm-banner">
+        <div class="sm-banner-item">
+            <span>crazy deals</span>
+            <h2>buy 1 get 1 free</h2>
+            <p>The best classic drees is on sale at cara</p>
+            <a href="#">Learn More</a>
+        </div>
+        <div class="sm-banner-item">
+            <span>crazy deals</span>
+            <h2>buy 1 get 1 free</h2>
+            <p>The best classic drees is on sale at cara</p>
+            <a href="#">Learn More</a>
+        </div>
+     </div>
+
+     <!-- Banner -->
+      <div class="banner">
+        <div class="banner-item">
+            <h2>Seasonal sale</h2>
+            <p>Winter Collection -50% Off</p>
+        </div>
+        <div class="banner-item">
+            <h2>Seasonal sale</h2>
+            <p>Winter Collection -50% Off</p>
+        </div>
+        <div class="banner-item">
+            <h2>Seasonal sale</h2>
+            <p>Winter Collection -50% Off</p>
+        </div>
+      </div>
 
     <script src="script.js"></script>
 </body>
