--- a/index.html
+++ b/index.html
@@ -350,6 +350,69 @@
         </div>
       </div>
 
+    <!-- Sign -->
+     <div class="sign">
+        <div class="sign-text">
+            <h2>Sign Up For Newsletters</h2>
+            <p>Get E-mail updates about our latest shop and <span>special offers.</span></p>
+        </div>
+        <div class="sign-form">
+            <input type="email" placeholder="
+            Your email address
+            ">
+            <a href="#">Sign Up</a>
+        </div>
+     </div>
+
+    <!-- Footer -->
+     <div class="footer">
+        <div class="footer-logo">
+            <img src="/img/logo.png" alt="">
+            <h3>Contact</h3>
+            <p><span>Address:</span> 562 Wellington Road. Street 32. San Francisco</p>
+            <p><span>Phone: </span>+012222365/(+91)0123456789</p>
+            <p><span>Hours: </span>10:00 - 18:00. Man-Sat</p>
+            <h3 class="follow">Follow Us</h3>
+            <div class="social">
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="#"><i class="fab fa-linkedin-in"></i></a>
+            </div>
+        </div>
+        <div class="footer-about">
+            <h3>About</h3>
+            <a href="#">About Us</a>
+            <a href="#">Delivery Information</a>
+            <a href="#">Privacy Policy</a>
+            <a href="#">Terms & Conditions</a>
+            <a href="#">Contact Us</a>
+        </div>
+        <div class="footer-account">
+            <h3>My Account</h3>
+            <a href="#">Sign In</a>
+            <a href="#">View Cart</a>
+            <a href="#">My Wishlist</a>
+            <a href="#">Track My Order</a>
+            <a href="#">Help</a>
+        </div>
+        <div class="install">
+            <h3>Install App</h3>
+            <p>From App Store or Google Play</p>
+            <div class="app-logo">
+                <img src="img/pay/app.jpg" alt="">
+                <img src="img/pay/play.jpg" alt="">
+            </div>
+            <p>Secured Payment Gateways</p>
+            <img src="img/pay/pay.png" alt="">
+        </div>
+     </div>
+
+    <!-- Footer bottom -->
+     <div class="footer-bottom">
+        <p>&copy; 2025. <span>Web dunyosi</span> - HTML CSS Ecommerce Template</p>
+     </div>
+
     <script src="script.js"></script>
 </body>
 
