shop & sproduct & style

--- a/shop.html
+++ b/shop.html
@@ -51,7 +51,7 @@
                         <i class="fas fa-star-half-alt"></i>
                     </div>
                     <h4>$78.00</h4>
-                    <a href="#"><i class='bxr  bx-shopping-bag'></i> </a>
+                    <a href="sproduct.html"><i class='bxr  bx-shopping-bag'></i> </a>
                 </div>
                 <div class="product-item">
                     <img src="img/products/f2.jpg" alt="">
@@ -65,7 +65,7 @@
                         <i class="fas fa-star-half-alt"></i>
                     </div>
                     <h4>$78.00</h4>
-                    <a href="#"><i class='bxr  bx-shopping-bag'></i> </a>
+                    <a href="sproduct.html"><i class='bxr  bx-shopping-bag'></i> </a>
                 </div>
                 <div class="product-item">
                     <img src="img/products/f3.jpg" alt="">
@@ -79,7 +79,7 @@
                         <i class="fas fa-star-half-alt"></i>
                     </div>
                     <h4>$78.00</h4>
-                    <a href="#"><i class='bxr  bx-shopping-bag'></i> </a>
+                    <a href="sproduct.html"><i class='bxr  bx-shopping-bag'></i> </a>
                 </div>
                 <div class="product-item">
                     <img src="img/products/f4.jpg" alt="">
@@ -93,7 +93,7 @@
                         <i class="fas fa-star-half-alt"></i>
                     </div>
                     <h4>$78.00</h4>
-                    <a href="#"><i class='bxr  bx-shopping-bag'></i> </a>
+                    <a href="sproduct.html"><i class='bxr  bx-shopping-bag'></i> </a>
                 </div>
                 <div class="product-item">
                     <img src="img/products/f5.jpg" alt="">
@@ -107,7 +107,7 @@
                         <i class="fas fa-star-half-alt"></i>
                     </div>
                     <h4>$78.00</h4>
-                    <a href="#"><i class='bxr  bx-shopping-bag'></i> </a>
+                    <a href="sproduct.html"><i class='bxr  bx-shopping-bag'></i> </a>
                 </div>
                 <div class="product-item">
                     <img src="img/products/f6.jpg" alt="">
@@ -121,7 +121,7 @@
                         <i class="fas fa-star-half-alt"></i>
                     </div>
                     <h4>$78.00</h4>
-                    <a href="#"><i class='bxr  bx-shopping-bag'></i> </a>
+                    <a href="sproduct.html"><i class='bxr  bx-shopping-bag'></i> </a>
                 </div>
                 <div class="product-item">
                     <img src="img/products/f7.jpg" alt="">
@@ -135,7 +135,7 @@
                         <i class="fas fa-star-half-alt"></i>
                     </div>
                     <h4>$78.00</h4>
-                    <a href="#"><i class='bxr  bx-shopping-bag'></i> </a>
+                    <a href="sproduct.html"><i class='bxr  bx-shopping-bag'></i> </a>
                 </div>
                 <div class="product-item">
                     <img src="img/products/f8.jpg" alt="">
@@ -149,7 +149,7 @@
                         <i class="fas fa-star-half-alt"></i>
                     </div>
                     <h4>$78.00</h4>
-                    <a href="#"><i class='bxr  bx-shopping-bag'></i> </a>
+                    <a href="sproduct.html"><i class='bxr  bx-shopping-bag'></i> </a>
                 </div>
             </div>
         </div>
@@ -272,6 +272,13 @@
             </div>
         </div>
     </div>
+
+    <!-- Pagenation -->
+     <div class="paganation">
+        <a href="#">1</a>
+        <a href="#">2</a>
+        <a href="#"><i class="bx bx-chevron-right"></i></a>
+     </div>
 
     <!-- Sign -->
     <div class="sign">
