--- a/sproduct.html
+++ b/sproduct.html
@@ -1,25 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Tech2etc Ecommerce Tutorial</title>
-        <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" />
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Cara</title>
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" />
+    <link href='https://cdn.boxicons.com/3.0.6/fonts/basic/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="style.css">
+</head>
 
-        <link rel="stylesheet" href="style.css">
-    </head>
+<body>
+    <!-- Topbar -->
+    <div class="topbar">
+        <a href="#"><img class="topbar-logo" src="img/logo.png"></a>
+        <div class="navbar">
+            <div class="navbar-list">
+                <a href="index.html">Home</a>
+                <a class="active" href="index.html">Shop</a>
+                <a href="blog.html">Blog</a>
+                <a href="about.html">About</a>
+                <a href="contact.html">Contact</a>
+            </div>
+            <a href="cart.html"><i class='bxr  bx-cart-minus'></i></a>
+            <i class='bxr  bx-menu-notification menu'></i>
+        </div>
+    </div>
 
-    <body>
+    <!-- Details -->
+     <div class="details">
+        <div class="details-img">
+            <img src="img/products/f1.jpg" alt="">
+            <div class="details-img-bottom">
+                <img src="img/products/f1.jpg" alt="">
+                <img src="img/products/f2.jpg" alt="">
+                <img src="img/products/f3.jpg" alt="">
+                <img src="img/products/f4.jpg" alt="">
+            </div>
+        </div>
+        <div class="details-text">
+            <h3>Men's Fashion T-Shirt</h3>
+            <h4>$139.00</h4>
+            <select>
+                <option>Select Size</option>
+                <option>52</option>
+                <option>50</option>
+                <option>48</option>
+            </select>
+            <div class="details-add">
+                <input type="number">
+                <button>Add to Cart</button>
+            </div>
+            <h3>Product Details</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, adipisci. Incidunt magnam aliquam ex quos, error quam molestiae deserunt assumenda iusto deleniti, ullam vitae. Voluptatum corporis, ut harum repellendus, blanditiis esse inventore ipsam praesentium non unde pariatur? In molestiae voluptatem iusto commodi modi, dignissimos alias eius, accusamus nihil eveniet saepe?</p>
+        </div>
+     </div>
 
+    <!-- Sign -->
+    <div class="sign">
+        <div class="sign-text">
+            <h2>Sign Up For Newsletters</h2>
+            <p>Get E-mail updates about our latest shop and <span>special offers.</span></p>
+        </div>
+        <div class="sign-form">
+            <input type="email" placeholder="
+            Your email address
+            ">
+            <a href="#">Sign Up</a>
+        </div>
+    </div>
 
-        <script>
-            // script for image change on click
-        </script>
+    <!-- Footer -->
+    <div class="footer">
+        <div class="footer-logo">
+            <img src="/img/logo.png" alt="">
+            <h3>Contact</h3>
+            <p><span>Address:</span> 562 Wellington Road. Street 32. San Francisco</p>
+            <p><span>Phone: </span>+012222365/(+91)0123456789</p>
+            <p><span>Hours: </span>10:00 - 18:00. Man-Sat</p>
+            <h3 class="follow">Follow Us</h3>
+            <div class="social">
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="#"><i class="fab fa-linkedin-in"></i></a>
+            </div>
+        </div>
+        <div class="footer-about">
+            <h3>About</h3>
+            <a href="#">About Us</a>
+            <a href="#">Delivery Information</a>
+            <a href="#">Privacy Policy</a>
+            <a href="#">Terms & Conditions</a>
+            <a href="#">Contact Us</a>
+        </div>
+        <div class="footer-account">
+            <h3>My Account</h3>
+            <a href="#">Sign In</a>
+            <a href="#">View Cart</a>
+            <a href="#">My Wishlist</a>
+            <a href="#">Track My Order</a>
+            <a href="#">Help</a>
+        </div>
+        <div class="install">
+            <h3>Install App</h3>
+            <p>From App Store or Google Play</p>
+            <div class="app-logo">
+                <img src="img/pay/app.jpg" alt="">
+                <img src="img/pay/play.jpg" alt="">
+            </div>
+            <p>Secured Payment Gateways</p>
+            <img src="img/pay/pay.png" alt="">
+        </div>
+    </div>
 
+    <!-- Footer bottom -->
+    <div class="footer-bottom">
+        <p>&copy; 2025. <span>Web dunyosi</span> - HTML CSS Ecommerce Template</p>
+    </div>
 
-        <script src="script.js"></script>
-    </body>
+    <script src="script.js"></script>
+</body>
 
 </html>
